Changelog
=========

3.0.5 (unreleased)
------------------

- Fix scadenza dates in views and tiles
  [cekk]
- Add menuitems entries
  [cekk]
- Fix collection view names
  [cekk]
- Fix templates and styles [nzambello]

3.0.4 (2018-01-29)
------------------

- Enable topic sorting criteria
  [cekk]
- Show text in collection view
  [cekk]
- Fix indexer for getScadenza_bando. Now don't add 1 day if the hour is set to 00:00
  [cekk]

3.0.3 (2018-01-28)
------------------

- Add versioning to folder deepenings.
  [eikichi18]
- Fix collection view for anonymous
  [cekk]


3.0.2 (2018-01-04)
------------------

- Add purge="False" to versioning profiles. This avoid override other content-types settings
  [cekk]


3.0.1 (2017-12-29)
------------------

- Added/fixed styles [nzambello]


3.0.0 (2017-12-21)
------------------

- Drop AT support and add Dx contents [eikichi18]
- Substituited formlib portlets with z3c.form portlets [eikichi18]
- Fixed check pubblication date [eikichi18]
- Removed old i18n traductions [eikichi18]
- Added uninstall profile [eikichi18]
- Delete all Topic's references [eikichi18]
- Update README [eikichi18]
- Update classifiers in setup.py [eikichi18]
- Update traduction [eikichi18]
- Fixed bando-right template [nzambello]
- field text moved under field description in add and edit Bando [eikichi18]
- "ente" field of type category and add default value "Regione Emilia-Romagna" [eikichi18]
- added RelatedItems behavior to bandi [eikichi18]
- added Settings fieldset behaviors to bandi [eikichi18]
- created control panel for bandi settings [eikichi18]
- fixed default view for bandi [eikichi18]
- fixed search_bandi_form view [eikichi18]
- fixed collections view [eikichi18]
- added layout bandi for tile [eikichi18]
- added new traduction [eikichi18]
- fixed search_bandi view for plone 5 [eikichi18]
- fixed SearchableText index for Bandi [eikichi18]
- added script for SearchableText reindex for bandi [eikichi18]

2.2.5 (2017-03-28)
------------------
