@@ -26,6 +26,7 @@
   <element value="plone.app.content.interfaces.INameFromTitle"/>
   <element value="plone.app.dexterity.behaviors.exclfromnav.IExcludeFromNavigation"/>
   <element value="plone.app.versioningbehavior.behaviors.IVersionable" />
+  <element value="Products.CMFPlone.interfaces.constrains.ISelectableConstrainTypes" />
  </property>
  <property name="schema">rer.bandi.interfaces.bandofolderdeepeningschema.IBandoFolderDeepeningSchema</property>
  <property name="model_source"></property>
